Fix banner style on mobile

--- a/src/component/bar/Banner.css
+++ b/src/component/bar/Banner.css
@@ -2,7 +2,6 @@
 .Banner, .Banner .carousel-root, .Banner .carousel {
     position: relative;
     width: 100%;
-    min-height: 300px;
 }
 
 .Banner > div {
